--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -17,11 +17,7 @@ body {
     font-family: $primaryFont;
     overflow-x: hidden;
     user-select: none;
-<<<<<<< HEAD
     -webkit-tap-highlight-color: transparent;
-=======
--webkit-tap-highlight-color: transparent;
->>>>>>> 423fc812aa32a1a0bafad72ee19888ca60d009c6
 }
 
 
@@ -33,11 +29,92 @@ li {
 
 
 
+@mixin custom-button {
+    margin-top: 80px;
+    border-radius: 40px;
+
+    button {
+        padding: 12px 30px 12px 30px;
+        background-color: $primaryColor;
+        color: white;
+        border-radius: 20px;
+        text-align: center;
+        font-size: 14px;
+        letter-spacing: 1px;
+        font-weight: 500;
+        cursor: pointer;
+        border: none;
+        position: relative;
 
 
+        &:hover {
+            @include transition-ease;
+            background-color: #3772C2;
+        }
+
+        &::after {
+            content: "";
+            display: block;
+            position: absolute;
+            border-radius: 4em;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            @include transition-ease;
+            box-shadow: 0 0 10px 40px #3772C2;
+        }
+
+        &:active:after {
+            box-shadow: 0 0 0 0 white;
+            position: absolute;
+            border-radius: 4em;
+            left: 0;
+            top: 0;
+            opacity: 1;
+            transition: 0s;
+
+        }
+
+        &:active {
+            top: 0;
 
 
+        }
+    }
 
+    @include media-md {
+    
+        button {
+            width: 190px;
+            height: 50px;
+            padding: 12px 20px 12px 20px;
+            border-radius: 55px;
+            font-weight: 500;
+            font-size: 16px;
+            background: #458FF6;
+
+
+        }
+    }
+
+    @include media-lg {
+    
+        button {
+            width: 200px;
+            height: 60px;
+
+            border-radius: 55px;
+            font-weight: 500;
+            font-size: 18px;
+            background: #458FF6;
+
+
+        }
+    }
+
+}
 
 
 
@@ -75,9 +152,3 @@ li {
         @content;
     }
 }
-
-
-
-
-
-
